--- a/TPWinForm_equipo-11/Winform.csproj
+++ b/TPWinForm_equipo-11/Winform.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8B7D7DF5-FD1B-43F4-80EF-B73E02839875}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TPWinForm_equipo_11</RootNamespace>
-    <AssemblyName>TPWinForm_equipo-11</AssemblyName>
+    <RootNamespace>WinForm</RootNamespace>
+    <AssemblyName>WinForm</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -62,6 +62,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
