Comenzamos con el codigo: Clases, Listado, Formulario principal

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -42,7 +42,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccessData.cs" />
+    <Compile Include="ArticuloBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{7b4b37db-ebf0-4aae-bce1-e5be736769b9}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
