Se agrego la modificacion de Articulos

--- a/TPWinforms_equipo-11/TPWinforms.csproj
+++ b/TPWinforms_equipo-11/TPWinforms.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrmModificaArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmModificaArticulo.Designer.cs">
+      <DependentUpon>FrmModificaArticulo.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmAboutUs.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMenu.resx">
       <DependentUpon>FrmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmModificaArticulo.resx">
+      <DependentUpon>FrmModificaArticulo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
