corregidos los business, y añadido ImagenBusiness, entre otros métodos

--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccessData.cs" />
     <Compile Include="ArticuloBusiness.cs" />
     <Compile Include="CategoriaBusiness.cs" />
+    <Compile Include="ImagenBusiness.cs" />
     <Compile Include="MarcaBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
